--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules --respawn src/shared/http/server.ts",
     "lint": "eslint . --ext .ts",
     "lint-fix": "eslint . --ext .ts --fix",
-    "migration:create": "cross-env migration_name=$npm_config_name typeorm migration:create ./src/shared/typeorm/migrations/$npm_config_name",
+    "migration:create": "cross-env MIGRATION_NAME=$npm_config_name ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:create ./src/shared/typeorm/migrations/%NAME%",
     "migration:run": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run -d ./src/shared/typeorm/data-source.ts"
   },
   "keywords": [],
@@ -25,6 +25,7 @@
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
+    "typeorm": "^0.3.25",
     "typescript": "^5.8.3"
   },
   "dependencies": {
@@ -33,7 +34,6 @@
     "express": "^4.21.2",
     "express-async-errors": "^3.1.1",
     "pg": "^8.16.3",
-    "reflect-metadata": "^0.2.2",
-    "typeorm": "^0.3.25"
+    "reflect-metadata": "^0.2.2"
   }
 }
