--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "bcrypt": "^6.0.0",
     "celebrate": "^15.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
