--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 .idea/
 .vscode/
-node_modules/
-build/
+/node_modules/
+/build/
 temp/
 .env/
 coverage
 ormconfig.josn
 dist
 
-uploads/*
+/uploads/*
 !uploads/.gitkeep
