feat: email config and send

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ DB_USER=postgres
 DB_PASS=admin
 DB_NAME=mysales
 APP_SECRET=1234466
+EMAIL_USER=guilherme.olv.05@gmail.com
+EMAIL_PASS=puvjvekozaeoybkt
